--- a/App.xaml
+++ b/App.xaml
@@ -9,12 +9,11 @@
         <ResourceDictionary>
             <converters:StringNotEmptyConverter x:Key="StringNotEmptyConverter" />
             
-            <Color x:Key="SecondaryTextColor">#888888</Color>
-            <Color x:Key="PrimaryTextColor">white</Color>
-            
             <ResourceDictionary.MergedDictionaries>
+                
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+                <ResourceDictionary Source="Resources/Styles/LightTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
             
         </ResourceDictionary>
