--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -4,7 +4,36 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
+    <Color x:Key="PrimaryColor">#1976D2</Color>
+    <Color x:Key="SecondaryColor">#03DAC5</Color>
 
+    <Color x:Key="PageBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="SurfaceBackgroundColor">#FAFAFA</Color>
+    <Color x:Key="CardBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="CardBorderColor">#E0E0E0</Color>
+
+    <Color x:Key="PrimaryTextColor">#111111</Color>
+    <Color x:Key="SecondaryTextColor">#666666</Color>
+
+    <Color x:Key="ChipBackgroundColor">#F4F4F4</Color>
+    <Color x:Key="DividerColor">#E0E0E0</Color>
+
+    <!-- Buttons -->
+    <Color x:Key="ButtonPrimaryBackgroundColor" >#1976D2</Color>
+    <Color x:Key="ButtonPrimaryTextColor">#FFFFFF</Color>
+
+    <Color x:Key="ButtonNeutralBackgroundColor">#607D8B</Color>
+    <Color x:Key="ButtonNeutralTextColor">#FFFFFF</Color>
+
+    <Color x:Key="ButtonSuccessBackgroundColor">#4CAF50</Color>
+    <Color x:Key="ButtonSuccessTextColor">#FFFFFF</Color>
+
+    <Color x:Key="ButtonWarningBackgroundColor">#FFA000</Color>
+    <Color x:Key="ButtonWarningTextColor">#FFFFFF</Color>
+
+    <Color x:Key="ButtonDangerBackgroundColor">#E53935</Color>
+    <Color x:Key="ButtonDangerTextColor">#FFFFFF</Color>
+    
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
