--- a/Resources/Styles/DarkTheme.xaml
+++ b/Resources/Styles/DarkTheme.xaml
@@ -1,12 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     x:Class="AMS.Resources.Styles.DarkTheme">
-    <Color x:Key="PageBackgroundColor">Black</Color>
-    <Color x:Key="NavigationBarColor">Teal</Color>
-    <Color x:Key="PrimaryColor">Teal</Color>
-    <Color x:Key="SecondaryColor">White</Color>
-    <Color x:Key="PrimaryTextColor">White</Color>
-    <Color x:Key="SecondaryTextColor">White</Color>
-    <Color x:Key="TertiaryTextColor">WhiteSmoke</Color>
-    <Color x:Key="TransparentColor">Transparent</Color>
+    <Color x:Key="PageBackgroundColor">#121212</Color>
+    <Color x:Key="SurfaceBackgroundColor">#1A1A1A</Color>
+    <Color x:Key="CardBackgroundColor">#1F1F1F</Color>
+    <Color x:Key="CardBorderColor">#333333</Color>
+
+    <Color x:Key="PrimaryTextColor">#ECECEC</Color>
+    <Color x:Key="SecondaryTextColor">#B0B0B0</Color>
+
+    <Color x:Key="ChipBackgroundColor">#2A2A2A</Color>
+
+    <!-- Buttons stay readable on dark -->
+    <Color x:Key="ButtonPrimaryTextColor">#FFFFFF</Color>
+    <Color x:Key="ButtonNeutralTextColor">#FFFFFF</Color>
+    <Color x:Key="ButtonSuccessTextColor">#FFFFFF</Color>
+    <Color x:Key="ButtonWarningTextColor">#111111</Color>
+    <Color x:Key="ButtonDangerTextColor">#FFFFFF</Color>
 </ResourceDictionary>
