--- a/Resources/Styles/LightTheme.xaml
+++ b/Resources/Styles/LightTheme.xaml
@@ -2,12 +2,11 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     x:Class="AMS.Resources.Styles.LightTheme">
-    <Color x:Key="PageBackgroundColor">White</Color>
-    <Color x:Key="NavigationBarColor">#2196F3</Color>
-    <Color x:Key="PrimaryColor">#2196F3</Color>
-    <Color x:Key="SecondaryColor">Black</Color>
-    <Color x:Key="PrimaryTextColor">Black</Color>
-    <Color x:Key="SecondaryTextColor">#333333</Color>
-    <Color x:Key="TertiaryTextColor">#666666</Color>
-    <Color x:Key="TransparentColor">Transparent</Color>
+    <Color x:Key="PageBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="SurfaceBackgroundColor">#FAFAFA</Color>
+    <Color x:Key="CardBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="CardBorderColor">#E0E0E0</Color>
+    <Color x:Key="PrimaryTextColor">#111111</Color>
+    <Color x:Key="SecondaryTextColor">#666666</Color>
+    <Color x:Key="ChipBackgroundColor">#F4F4F4</Color>
 </ResourceDictionary>
